hphp/test/slow/sealed/sealed_classes7.php.expectf
Fatal error: Traits cannot be sealed. in %s/hphp/test/slow/sealed/sealed_classes7.php on line 3
